--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,12 +1,18 @@
 <div class="sidebar">
   <div class="container sidebar-sticky">
     <div class="sidebar-about">
+      <p class="lead" id="linebreaker"><b>&#128679 BLOG UNDER CONSTRUCTION &#128679 
+      COME BACK <i>JAN 2023</i> FOR THE FIRST TRIO OF POSTS
+      </b></p>
+      <br> <br> <br>
       <h1>
         <a href="{{ site.url }}">
           {{ site.title }}
         </a>
       </h1>
-      <p class="lead">{{ site.description }}</p>
+      <p class="lead" id="linebreaker">{{ site.description }}
+      {{ site.description_line2 }}
+      </p>
     </div>
 
     <nav class="sidebar-nav">
@@ -26,11 +32,25 @@
         {% endif %}
       {% endfor %}
 
-      <a class="sidebar-nav-item" href="{{ site.github.repo }}/archive/v{{ site.version }}.zip">Download</a>
-      <a class="sidebar-nav-item" href="{{ site.github.repo }}">GitHub project</a>
-      <span class="sidebar-nav-item">Currently v{{ site.version }}</span>
+
+      <!-- <div class="sidebar-nav-item">
+        <p>
+      
+            <a href="{{ site.github.repo }}">
+            <i class="fa fa-github" aria-hidden="true"></i></a>
+            &nbsp;
+            <a href="{{ site.social.linkedin }}">
+                <i class="fa fa-linkedin-square"></i>
+            </a>&nbsp;
+            <a href="{{ site.social.mail }}">
+                <i class="fa fa-mail-square"></i>
+            </a>&nbsp;
+
+        </p>
+      </div> -->
+
     </nav>
 
-    <p>&copy; {{ site.time | date: '%Y' }}. All rights reserved.</p>
+    <p>&copy; Mustafa Yasir {{ site.time | date: '%Y' }}. All rights reserved.</p>
   </div>
 </div>
