--- a/public/css/hyde.css
+++ b/public/css/hyde.css
@@ -53,6 +53,8 @@ html {
  * out above content in mobile and later moves to the side with wider viewports.
  */
 
+@import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
+
 .sidebar {
   text-align: center;
   padding: 2rem 1rem;
@@ -65,7 +67,7 @@ html {
     top: 0;
     left: 0;
     bottom: 0;
-    width: 18rem;
+    width: 28rem;
     text-align: left;
   }
 }
@@ -79,8 +81,8 @@ html {
 .sidebar-about h1 {
   color: #fff;
   margin-top: 0;
-  font-family: "Abril Fatface", serif;
-  font-size: 3.25rem;
+  font-family: 'Press Start 2P', cursive;
+  font-size: 3.125rem;
 }
 
 /* Sidebar nav */
@@ -97,6 +99,10 @@ a.sidebar-nav-item:focus {
 }
 .sidebar-nav-item.active {
   font-weight: bold;
+}
+
+#linebreaker {
+  white-space: pre-line;
 }
 
 /* Sticky sidebar
@@ -129,14 +135,14 @@ a.sidebar-nav-item:focus {
 @media (min-width: 48em) {
   .content {
     max-width: 38rem;
-    margin-left: 20rem;
+    margin-left: 28rem;
     margin-right: 2rem;
   }
 }
 
 @media (min-width: 64em) {
   .content {
-    margin-left: 22rem;
+    margin-left: 32rem;
     margin-right: 4rem;
   }
 }
