--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,9 +1,9 @@
 <div class="sidebar">
   <div class="container sidebar-sticky">
     <div class="sidebar-about">
-      <p class="lead" id="linebreaker"><b>&#128679 BLOG UNDER CONSTRUCTION &#128679 
-      COME BACK <i>JAN 2023</i> FOR THE FIRST TRIO OF POSTS
-      </b></p>
+      <p class="lead" id="linebreaker">
+        <b>&#128679 BLOG UNDER CONSTRUCTION &#128679 </b>
+      </p>
       <br> <br>
       <h1>
         <a href="{{ site.url }}">
