first post and updates

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -33,21 +33,21 @@
       {% endfor %}
 
 
-      <!-- <div class="sidebar-nav-item">
+      <div class="sidebar-nav-item">
         <p>
       
-            <a href="{{ site.github.repo }}">
-            <i class="fa fa-github" aria-hidden="true"></i></a>
-            &nbsp;
-            <a href="{{ site.social.linkedin }}">
-                <i class="fa fa-linkedin-square"></i>
-            </a>&nbsp;
             <a href="{{ site.social.mail }}">
-                <i class="fa fa-mail-square"></i>
-            </a>&nbsp;
-
+              <i class="fa-solid fa-envelope fa-lg"></i>
+            </a>
+            <a href="{{ site.social.linkedin }}">
+                <i class="fa-brands fa-linkedin fa-lg"></i>
+            </a>
+            <a href="{{ site.github.repo }}">
+              <i class="fa fa-github fa-lg" aria-hidden="true"></i>
+            </a>
+          
         </p>
-      </div> -->
+      </div>
 
     </nav>
 
