--- a/_includes/head.html
+++ b/_includes/head.html
@@ -29,4 +29,7 @@
 
   <!-- RSS -->
   <link rel="alternate" type="application/rss+xml" title="RSS" href="/atom.xml">
+
+  <script src="https://kit.fontawesome.com/7b48de39a9.js" crossorigin="anonymous"></script>
+  
 </head>
