scholar to sidebar

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -35,7 +35,6 @@
 
       <div class="sidebar-nav-item">
         <p>
-      
             <a href="{{ site.social.mail }}">
               <i class="fa-solid fa-envelope fa-lg"></i>
             </a>
@@ -45,7 +44,9 @@
             <a href="{{ site.github.repo }}">
               <i class="fa fa-github fa-lg" aria-hidden="true"></i>
             </a>
-          
+            <a href="{{ site.social.scholar }}">
+              <i class="fa-brands fa-google-scholar fa-lg" aria-hidden="true"></i>
+            </a>
         </p>
       </div>
 
